Chart-Arlan/templates/arlan-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betting-service
  template:
    metadata:
      labels:
        app: betting-service
    spec:
      containers:
      - name: betting-service
        image: arala/arlan:1
        ports:
        - containerPort: 8080
