Chart-Arlan/templates/arlan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: betting-service
spec:
  selector:
    app: betting-service
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
