Chart-Arlan/templates/arlan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betting-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: golang.medhelper.xyz
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: betting-service
            port:
              number: 8080
